--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "food-calculator",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "release": "standard-version"
   },
   "dependencies": {
     "@iconify/react": "4.1.1",
@@ -30,6 +31,7 @@
     "@types/react-dom": "18",
     "@types/react-is": "18.3.0",
     "postcss": "8",
+    "standard-version": "^9.5.0",
     "tailwindcss": "3.4.4",
     "typescript": "5"
   }
