--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "food-calculator",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -19,6 +19,7 @@
     "lodash": "4.17.21",
     "moment": "2.29.4",
     "next": "^15.1.1",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0-rc.1",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^19.0.0-rc.1",
