--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "food-calculator",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,6 +10,7 @@
     "release": "standard-version"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
     "@iconify/react": "4.1.1",
     "@tabler/icons-react": "3.5.0",
     "apexcharts": "^4.2.0",
@@ -23,8 +24,13 @@
     "react": "^19.0.0-rc.1",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^19.0.0-rc.1",
+    "react-hook-form": "^7.57.0",
+    "react-hot-toast": "^2.5.2",
     "sharp": "0.32.6",
-    "simplebar-react": "3.2.5"
+    "simplebar-react": "3.2.5",
+    "sweetalert2": "^11.22.0",
+    "sweetalert2-react-content": "^5.1.0",
+    "zod": "^3.25.63"
   },
   "devDependencies": {
     "@types/node": "20",
