--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "food-calculator",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -33,6 +33,7 @@
     "zod": "^3.25.63"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.17",
     "@types/node": "20",
     "@types/react": "18",
     "@types/react-dom": "18",
