--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "2.29.4",
     "next": "^15.1.1",
     "next-auth": "^4.24.11",
+    "next-intl": "^4.1.0",
     "react": "^19.0.0-rc.1",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^19.0.0-rc.1",
