--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "food-calculator",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,13 +10,18 @@
     "release": "standard-version"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.1.1",
     "@iconify/react": "4.1.1",
     "@tabler/icons-react": "3.5.0",
+    "@tanstack/react-table": "^8.21.3",
     "apexcharts": "^4.2.0",
     "eslint-config-next": "^15.1.1",
     "flowbite": "2.3.0",
     "flowbite-react": "0.10.1",
+    "i18next": "^25.2.1",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lodash": "4.17.21",
     "moment": "2.29.4",
     "next": "^15.1.1",
@@ -27,6 +32,7 @@
     "react-dom": "^19.0.0-rc.1",
     "react-hook-form": "^7.57.0",
     "react-hot-toast": "^2.5.2",
+    "react-i18next": "^15.5.3",
     "sharp": "0.32.6",
     "simplebar-react": "3.2.5",
     "sweetalert2": "^11.22.0",
