--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "food-calculator",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -17,6 +17,7 @@
     "@tabler/icons-react": "3.5.0",
     "@tanstack/react-table": "^8.21.3",
     "apexcharts": "^4.2.0",
+    "axios": "^1.10.0",
     "eslint-config-next": "^15.1.1",
     "flowbite": "2.3.0",
     "flowbite-react": "0.10.1",
@@ -37,7 +38,8 @@
     "simplebar-react": "3.2.5",
     "sweetalert2": "^11.22.0",
     "sweetalert2-react-content": "^5.1.0",
-    "zod": "^3.25.63"
+    "zod": "^3.25.63",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.17",
