--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@iconify/react": "4.1.1",
     "@tabler/icons-react": "3.5.0",
     "@tanstack/react-table": "^8.21.3",
+    "@vercel/speed-insights": "^1.2.0",
     "apexcharts": "^4.2.0",
     "axios": "^1.10.0",
     "eslint-config-next": "^15.1.1",
